fix so can render at git pages

--- a/albums/ashes-and-echoes/tracks/ash-and-echoes.html
+++ b/albums/ashes-and-echoes/tracks/ash-and-echoes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ash and Echoes (The Temple Song) – Mycal</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
 <!-- JSON-LD for this track -->
 <!-- Person/Artist Entity - CANONICAL VERSION (identical across all pages) -->
@@ -433,14 +433,14 @@
     <!-- HERO START -->
     <main>
       <section class="hero">
-        <img src="/assets/img/tracks/The-Temple-Song.jpg" alt="Cover art for Ash and Echoes (The Temple Song)">
+        <img src="https://music.mycal.net/assets/img/tracks/The-Temple-Song.jpg" alt="Cover art for Ash and Echoes (The Temple Song)">
         <div class="hero-content">
           <p class="meta">Track 10 · 3:43 · Ashes and Echoes — Songs from the Playa</p>
           <h1>Ash and Echoes (The Temple Song)</h1>
           <p>“Ash and Echoes (The Temple Song)” is the quiet center of the album — a hymn for the Temple, where feathers, photos, names and dust all meet the fire. It follows the walk in, the burn, and the strange lightness that comes after we let go of what we could never quite say out loud.</p>
           <div class="button-row">
             <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+            <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">Back to album</a>
           </div>
           <div class="track-embed">
             <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=1009265777/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
