--- a/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
+++ b/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>The Buck Bandersnatch Song (Playa Dreams) – Mycal</title>
   <meta name="description" content="\"The Buck Bandersnatch Song (Playa Dreams)\" wanders through Wunjo runes, tarot pulls, JuPlaya nights, and temple whispers to find joy beyond the burn.">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
 <!-- Person/Artist Entity - CANONICAL VERSION (identical across all pages) -->
 <script type="application/ld+json">
@@ -448,14 +448,14 @@
     <!-- HERO START -->
     <main>
       <section class="hero">
-        <img src="/assets/img/tracks/The-Buck-Bandersnatch-Song.jpg" alt="Cover art for The Buck Bandersnatch Song (Playa Dreams)">
+        <img src="https://music.mycal.net/assets/img/tracks/The-Buck-Bandersnatch-Song.jpg" alt="Cover art for The Buck Bandersnatch Song (Playa Dreams)">
         <div class="hero-content">
           <p class="meta">Track 9 · 3:14 · Ashes and Echoes — Songs from the Playa</p>
           <h1>The Buck Bandersnatch Song (Playa Dreams)</h1>
           <p>“The Buck Bandersnatch Song (Playa Dreams)” drifts through runes, tarot pulls, JuPlaya nights and temple cloth embers. It’s a whispered confession about surrender and joy, etched in Wunjo, dust, and the sense that the Playa might be ending something — or starting something entirely new.</p>
           <div class="button-row">
             <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
-            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+            <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">Back to album</a>
           </div>
           <div class="track-embed">
             <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=1562375624/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
