--- a/albums/ashes-and-echoes/tracks/weird-steel.html
+++ b/albums/ashes-and-echoes/tracks/weird-steel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Weird Steel – Mycal</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
 <!-- Person/Artist Entity - CANONICAL VERSION (identical across all pages) -->
 <script type="application/ld+json">
@@ -613,14 +613,14 @@
     <!-- HERO START -->
     <main>
       <section class="hero">
-        <img src="/assets/img/tracks/weird-steel.jpg" alt="Cover art for Weird Steel">
+        <img src="https://music.mycal.net/assets/img/tracks/weird-steel.jpg" alt="Cover art for Weird Steel">
         <div class="hero-content">
           <p class="meta">Track 6 · 3:42 · Ashes and Echoes — Songs from the Playa</p>
           <h1>Weird Steel</h1>
           <p>“Weird Steel” is the Reared in Steel anthem — forged in Petaluma, broadcast from 9 &amp; A. It’s a shout-out to Rhino Redemption, Medusa, the Fire Kathedral, GUMA, couches in the sky, grilled cheese, slushies, MOOP strike teams, and the dusty crew that keeps building year after year. Camp lore turned into a sing-along.</p>
           <div class="button-row">
             <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
-            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+            <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">Back to album</a>
           </div>
           <div class="track-embed">
             <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=2255024535/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
