--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>music.mycal.net — Albums by Mycal</title>
   <meta name="description" content="Discover Mycal's music catalog, including Ashes and Echoes – Songs from the Playa.">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="icon" type="image/png" href="https://music.mycal.net/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/svg+xml" href="https://music.mycal.net/favicon.svg">
+  <link rel="shortcut icon" href="https://music.mycal.net/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://music.mycal.net/apple-touch-icon.png">
+  <link rel="manifest" href="https://music.mycal.net/site.webmanifest">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
   <script defer src="https://analytics.mycal.net/script.js" data-website-id="875131dd-45c8-4045-a25e-d7e326dbf431"></script>
 
@@ -744,7 +744,7 @@
       </a>
       <div class="nav-links">
         <a href="/">Home</a>
-        <a href="/albums/ashes-and-echoes/">Ashes and Echoes</a>
+        <a href="albums/ashes-and-echoes/">Ashes and Echoes</a>
         <a href="https://mycalmusic.bandcamp.com/" target="_blank" rel="noopener">Bandcamp</a>
       </div>
     </nav>
@@ -752,13 +752,13 @@
 
   <main>
     <section class="hero">
-      <img src="/assets/img/album/ashes-and-echoes-cover.jpg" alt="Ashes and Echoes album cover featuring a Burning Man-inspired scene">
+      <img src="assets/img/album/ashes-and-echoes-cover.jpg" alt="Ashes and Echoes album cover featuring a Burning Man-inspired scene">
       <div class="hero-content">
         <p class="meta">Mycal Music • Folk x Fire x Electronic • 2025</p>
         <h1>Music forged in dust, steel, and starlight.</h1>
         <p>Welcome to the home of Mycal's music. Dive into stories from Black Rock City, recorded with fire-lit grit and cinematic electronics. Explore the album, read lyrics, and stream wherever you listen.</p>
         <div class="button-row">
-          <a class="button" href="/albums/ashes-and-echoes/">View Album</a>
+          <a class="button" href="albums/ashes-and-echoes/">View Album</a>
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream Everywhere</a>
         </div>
       </div>
@@ -771,7 +771,7 @@
       </div>
       <div class="grid">
         <article class="card">
-          <img src="/assets/img/album/ashes-and-echoes-cover.jpg" alt="Ashes and Echoes album cover by Mycal">
+          <img src="https://music.mycal.net/assets/img/album/ashes-and-echoes-cover.jpg" alt="Ashes and Echoes album cover by Mycal">
           <div class="card-content">
             <div class="meta">Released August 15, 2025</div>
             <h3 style="margin:0;">Ashes and Echoes — Songs from the Playa</h3>
@@ -782,7 +782,7 @@
               <span class="tag">Story Songs</span>
             </div>
             <div class="button-row">
-              <a class="button" href="/albums/ashes-and-echoes/">View Album</a>
+              <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">View Album</a>
               <a class="button" href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes" target="_blank" rel="noopener">Bandcamp</a>
             </div>
           </div>
@@ -803,7 +803,7 @@
   </footer>
 
 
-<script defer src="/assets/js/analytics-events.js"></script>
+<script defer src="https://music.mycal.net/assets/js/analytics-events.js"></script>
 
 
 </body>
