--- a/albums/ashes-and-echoes/index.html
+++ b/albums/ashes-and-echoes/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ashes and Echoes — Songs from the Playa | Mycal</title>
   <meta name="description" content="Ashes and Echoes is Mycal's Burning Man-inspired album of folk-electronic stories from fire, dust, and steel.">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="icon" type="image/png" href="https://music.mycal.net/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/svg+xml" href="https://music.mycal.net/favicon.svg">
+  <link rel="shortcut icon" href="https://music.mycal.net/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://music.mycal.net/apple-touch-icon.png">
+  <link rel="manifest" href="https://music.mycal.net/site.webmanifest">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
   <script defer src="https://analytics.mycal.net/script.js" data-website-id="875131dd-45c8-4045-a25e-d7e326dbf431"></script>
 
@@ -1004,7 +1004,7 @@
       </a>
       <div class="nav-links">
         <a href="/">Home</a>
-        <a href="/albums/ashes-and-echoes/">Album</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/">Album</a>
         <a href="#tracklist">Tracks</a>
       </div>
     </nav>
@@ -1012,7 +1012,7 @@
 
   <main>
     <section class="hero">
-      <img src="/assets/img/album/ashes-and-echoes-cover.jpg" alt="Ashes and Echoes album cover art by Mycal featuring fire-lit desert imagery">
+      <img src="https://music.mycal.net/assets/img/album/ashes-and-echoes-cover.jpg" alt="Ashes and Echoes album cover art by Mycal featuring fire-lit desert imagery">
       <div class="hero-content">
         <p class="meta">Ashes and Echoes — Songs from the Playa</p>
         <h1>Stories from Fire and Steel.</h1>
@@ -1041,98 +1041,98 @@
       <ol class="tracklist">
         <li class="track-item">
           <span>1.</span>
-          <a href="/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html">We Did Start the Fire (Burning Man History Jam)</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html">We Did Start the Fire (Burning Man History Jam)</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=416474459/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>2.</span>
-          <a href="/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html">I Was Meant to Burn</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html">I Was Meant to Burn</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=296007254/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>3.</span>
-          <a href="/albums/ashes-and-echoes/tracks/burner-girl.html">Burner Girl</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl.html">Burner Girl</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=3197213755/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>4.</span>
-          <a href="/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html">Ten Principles, One Heart</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html">Ten Principles, One Heart</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=928998176/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>5.</span>
-          <a href="/albums/ashes-and-echoes/tracks/speak-burner-to-me.html">Speak Burner to Me</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me.html">Speak Burner to Me</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=3144384143/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>6.</span>
-          <a href="/albums/ashes-and-echoes/tracks/weird-steel.html">Weird Steel</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel.html">Weird Steel</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=2255024535/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>7.</span>
-          <a href="/albums/ashes-and-echoes/tracks/dust-to-dust.html">Dust to Dust (The Playa Sucks)</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust.html">Dust to Dust (The Playa Sucks)</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=2748428151/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>8.</span>
-          <a href="/albums/ashes-and-echoes/tracks/sparkle-pony.html">Sparkle Pony</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony.html">Sparkle Pony</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=1300340550/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>9.</span>
-          <a href="/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html">The Buck Bandersnatch Song (Playa Dreams)</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html">The Buck Bandersnatch Song (Playa Dreams)</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=1562375624/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>10.</span>
-          <a href="/albums/ashes-and-echoes/tracks/ash-and-echoes.html">Ash and Echoes (The Temple Song)</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes.html">Ash and Echoes (The Temple Song)</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=1009265777/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>11.</span>
-          <a href="/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html">Overheard at Burning Man</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html">Overheard at Burning Man</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=2114621308/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>12.</span>
-          <a href="/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html">Fighting Wasn't Working</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html">Fighting Wasn't Working</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=178738634/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>13.</span>
-          <a href="/albums/ashes-and-echoes/tracks/no-authority-night-crew.html">No Authority Night Crew</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/no-authority-night-crew.html">No Authority Night Crew</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=4218787746/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item">
           <span>14.</span>
-          <a href="/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html">Petaluma Chicken Scratch</a>
+          <a href="https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html">Petaluma Chicken Scratch</a>
           <div class="track-embed">
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=2599138715/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
@@ -1151,7 +1151,7 @@
     </div>
   </footer>
 
-  <script defer src="/assets/js/analytics-events.js"></script>
+  <script defer src="https://music.mycal.net/assets/js/analytics-events.js"></script>
 
 </body>
 </html>
