--- a/albums/ashes-and-echoes/tracks/burner-girl.html
+++ b/albums/ashes-and-echoes/tracks/burner-girl.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Burner Girl – Mycal</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
   <!-- JSON-LD for this track -->
 <!-- Person/Artist Entity - CANONICAL VERSION (identical across all pages) -->
@@ -419,14 +419,14 @@
     <!-- HERO START -->
     <main>
       <section class="hero">
-        <img src="/assets/img/tracks/Burner-Girl.jpg" alt="Cover art for Burner Girl">
+        <img src="https://music.mycal.net/assets/img/tracks/Burner-Girl.jpg" alt="Cover art for Burner Girl">
         <div class="hero-content">
           <p class="meta">Track 3 · 4:00 · Ashes and Echoes — Songs from the Playa</p>
           <h1>Burner Girl</h1>
           <p>“Burner Girl” is a desert crush anthem — a neon-lit love song about finding your orbit around a wild, glowing soul on the Playa. It lives where lasers, basslines, and dust storms collide: art cars rolling by, heartbeat to heartbeat, two burners spinning through the night like they were meant to meet there all along.</p>
           <div class="button-row">
             <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
-            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+            <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">Back to album</a>
           </div>
           <div class="track-embed">
             <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=3197213755/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
