--- a/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
+++ b/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
   <script defer src="https://analytics.mycal.net/script.js" data-website-id="875131dd-45c8-4045-a25e-d7e326dbf431"></script>
 
@@ -498,22 +498,22 @@
         <span>music.mycal.net</span>
       </a>
       <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/">Album</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/#tracklist">Tracklist</a>
       </div>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <img src="/assets/img/tracks/i-was-ment-2-burn.jpg" alt="Cover art for I Was Meant to Burn">
+      <img src="https://music.mycal.net/assets/img/tracks/i-was-ment-2-burn.jpg" alt="Cover art for I Was Meant to Burn">
       <div class="hero-content">
         <p class="meta">Ashes and Echoes — Track 2 · 3:45</p>
         <h1>I Was Meant to Burn</h1>
         <p>Steel-and-fire mantra about surrendering to transformation in the desert. The Man and the Temple rise, fall, and rise again — a reminder that some part of you was always destined for the flame.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Listen everywhere</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+          <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">Back to album</a>
         </div>
         <div class="track-embed">
           <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=296007254/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
@@ -614,13 +614,13 @@ burn it all down
     <div class="footer-inner">
       <div>© 2025 Mycal Music</div>
       <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/">Album</a>
         <a href="/">Home</a>
       </div>
     </div>
   </footer>
 
-  <script defer src="/assets/js/analytics-events.js"></script>
+  <script defer src="assets/js/analytics-events.js"></script>
 
 
 </body>
