--- a/albums/ashes-and-echoes/tracks/no-authority-night-crew.html
+++ b/albums/ashes-and-echoes/tracks/no-authority-night-crew.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 </head>
 <body>
   <header>
@@ -19,22 +19,22 @@
         <span>music.mycal.net</span>
       </a>
       <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/">Album</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/#tracklist">Tracklist</a>
       </div>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <img src="/assets/img/tracks/no-autority-night-crew-pre.jpg" alt="Cover art for No Authority Night Crew">
+      <img src="https://music.mycal.net/assets/img/tracks/no-autority-night-crew-pre.jpg" alt="Cover art for No Authority Night Crew">
       <div class="hero-content">
         <p class="meta">Ashes and Echoes — Track 13 · 2:41</p>
         <h1>No Authority Night Crew</h1>
         <p>Low-end grooves and whispered vocals dedicated to Rangers, lamplighters, and late-night helpers.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+          <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">Back to album</a>
         </div>
         <div class="track-embed">
           <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=4218787746/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
@@ -54,7 +54,7 @@ No Authority Night Crew (ooooh Yaaaa)
     <div class="footer-inner">
       <div>© 2025 Mycal Music</div>
       <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/">Album</a>
         <a href="/">Home</a>
       </div>
     </div>
