--- a/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
+++ b/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
   <!-- Person/Artist Entity - CANONICAL VERSION (identical across all pages) -->
 <script type="application/ld+json">
@@ -477,22 +477,22 @@
         <span>music.mycal.net</span>
       </a>
       <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
-        <a href="/albums/ashes-and-echoes/#tracklist">Tracklist</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/">Album</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/#tracklist">Tracklist</a>
       </div>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <img src="/assets/img/tracks/overheard-at-burningman.jpg" alt="Cover art for Overheard at Burning Man">
+      <img src="https://music.mycal.net/assets/img/tracks/overheard-at-burningman.jpg" alt="Cover art for Overheard at Burning Man">
       <div class="hero-content">
         <p class="meta">Ashes and Echoes — Track 11 · 6:44</p>
         <h1>Overheard at Burning Man</h1>
         <p>“Overheard at Burning Man” is a spoken-word walk through Black Rock City’s subconscious — DPW one-liners, techno snob mantras, medic tent confessions, influencer absurdities, and temple whispers stitched into one long dust-soaked eavesdrop.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
-          <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+          <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">Back to album</a>
         </div>
         <div class="track-embed">
           <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=2114621308/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
@@ -610,7 +610,7 @@ after the burn.
     <div class="footer-inner">
       <div>© 2025 Mycal Music</div>
       <div class="nav-links">
-        <a href="/albums/ashes-and-echoes/">Album</a>
+        <a href="https://music.mycal.net/albums/ashes-and-echoes/">Album</a>
         <a href="/">Home</a>
       </div>
     </div>
