--- a/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
+++ b/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Petaluma Chicken Scratch – Mycal</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
 <!-- Person/Artist Entity - CANONICAL VERSION (identical across all pages) -->
 <script type="application/ld+json">
@@ -480,14 +480,14 @@
     <!-- HERO START -->
     <main>
       <section class="hero">
-        <img src="/assets/img/tracks/petaluma-chicken-scratch.jpg" alt="Cover art for Petaluma Chicken Scratch">
+        <img src="https://music.mycal.net/assets/img/tracks/petaluma-chicken-scratch.jpg" alt="Cover art for Petaluma Chicken Scratch">
         <div class="hero-content">
           <p class="meta">Track 14 · 5:49 · Ashes and Echoes — Songs from the Playa</p>
           <h1>Petaluma Chicken Scratch</h1>
           <p>“Petaluma Chicken Scratch” is a celebration of backyard legends — homegrown strains, compost-powered magic, Burning Man gifting culture, and the way a local story becomes a mythology shared across seasons. Part roots-folk, part playful anthem, all Petaluma pride.</p>
           <div class="button-row">
             <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
-            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+            <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">Back to album</a>
           </div>
           <div class="track-embed">
             <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=2599138715/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
