--- a/albums/ashes-and-echoes/tracks/sparkle-pony.html
+++ b/albums/ashes-and-echoes/tracks/sparkle-pony.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sparkle Pony – Mycal</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://music.mycal.net/assets/css/style.css">
 
  <!-- Person/Artist Entity - CANONICAL VERSION (identical across all pages) -->
 <script type="application/ld+json">
@@ -444,14 +444,14 @@
     <!-- HERO START -->
     <main>
       <section class="hero">
-        <img src="/assets/img/tracks/sparkel-pony.jpg" alt="Cover art for Sparkle Pony">
+        <img src="https://music.mycal.net/assets/img/tracks/sparkel-pony.jpg" alt="Cover art for Sparkle Pony">
         <div class="hero-content">
           <p class="meta">Track 8 · 3:08 · Ashes and Echoes — Songs from the Playa</p>
           <h1>Sparkle Pony</h1>
           <p>“Sparkle Pony” is a satire sung from the Sparkle Pony’s own throne — chopper drops, billionaire audiences, filters, clout, and a 24-hour dust runway before wheels up. It’s both roast and portrait: the Playa as backdrop for one more glitter-drenched personal brand.</p>
           <div class="button-row">
             <a class="button" href="#" target="_blank" rel="noopener">Stream</a>
-            <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
+            <a class="button" href="https://music.mycal.net/albums/ashes-and-echoes/">Back to album</a>
           </div>
           <div class="track-embed">
             <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=1300340550/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
